    that got replaced by libgtk-3-bin (Closes: #617662 ).

  [ Michael Biebl ]
  * debian/watch: Switch to .bz2 tarballs.
  * New upstream release.
  * Refresh patches.
  * Bump Standards-Version to 3.9.2. No further changes.
  * Bump debhelper compatibility level to 8. Update Build-Depends accordingly.
  * Drop Build-Depends on dpkg-dev (>= 1.13.19). Even lenny has a more recent
    version.

 -- Michael Biebl <biebl@debian.org>  Fri, 03 Jun 2011 22:49:08 +0200

gtk+3.0 (3.0.8-1) unstable; urgency=low

  * Make the -dev package depend on the gir package.
  * New upstream release.
  * Drop the mimeinfo.cache from the udeb, it’s been moved to
    gdk-pixbuf.
  * Upload to unstable; drop check-dist include.

 -- Josselin Mouette <joss@debian.org>  Sun, 10 Apr 2011 18:29:44 +0200

gtk+3.0 (3.0.6-1) experimental; urgency=low

  * New upstream release.
    + debian/libgtk-3-0.symbols:
      - Updated.
  * debian/control.in:
    + Tighten libatk1.0-dev b-d to make sure we get an Atk-1.0.gir file.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sat, 26 Mar 2011 00:00:41 +0000

gtk+3.0 (3.0.3-1) experimental; urgency=low

  * New upstream release.
    + debian/control.in:
      - Bump minimum libpango1.0-dev dependency.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Mon, 14 Mar 2011 23:34:09 +0000

gtk+3.0 (3.0.2-1) experimental; urgency=low

  * New upstream release
  * debian/patches/080_prevent_invalid_free.patch
    - Removed. fixed upstream

 -- Sjoerd Simons <sjoerd@debian.org>  Wed, 09 Mar 2011 23:46:48 +0000

gtk+3.0 (3.0.1-2) experimental; urgency=low

  * debian/patches/080_prevent_invalid_free.patch
    - Added. Prevent invalid free on double/tripple click events (from upstream
      git)

 -- Sjoerd Simons <sjoerd@debian.org>  Sat, 26 Feb 2011 16:02:13 +0000

gtk+3.0 (3.0.1-1) experimental; urgency=low

  [ Robert Ancell ]
  * debian/libgtk-3-bin.postrm:
  * debian/libgtk-3-bin.preinst:
    - Fix package name used in diversion

  [ Emilio Pozuelo Monfort ]