@@ -63,9 +63,9 @@ Suggests: librsvg2-common,
           gvfs
 Conflicts: libgtk3.0-0
 Replaces: libgtk3.0-0
-Description: The GTK+ graphical user interface library
- The GTK+ is a multi-platform toolkit for creating graphical user
- interfaces. Offering a complete set of widgets, the GTK+ is suitable
+Description: GTK+ graphical user interface library
+ GTK+ is a multi-platform toolkit for creating graphical user
+ interfaces. Offering a complete set of widgets, GTK+ is suitable
  for projects ranging from small one-off tools to complete application
  suites.
  .
@@ -81,11 +81,11 @@ Depends: ${shlibs:Depends},
 Provides: @GTK_BINVER_DEP@
 Conflicts: libgtk3.0-0-udeb
 Replaces: libgtk3.0-0-udeb
-Description: The GTK+ graphical user interface library - minimal runtime
+Description: GTK+ graphical user interface library - minimal runtime
  This is a udeb, or a microdeb, for the debian-installer.
  .
- The GTK+ is a multi-platform toolkit for creating graphical user
- interfaces. Offering a complete set of widgets, the GTK+ is suitable
+ GTK+ is a multi-platform toolkit for creating graphical user
+ interfaces. Offering a complete set of widgets, GTK+ is suitable
  for projects ranging from small one-off tools to complete application
  suites.
  .
@@ -99,9 +99,9 @@ Depends: ${misc:Depends}
 Recommends: @SHARED_PKG@
 Conflicts: libgtk3.0-common
 Replaces: libgtk3.0-common
-Description: Common files for the GTK+ graphical user interface library
- The GTK+ is a multi-platform toolkit for creating graphical user
- interfaces. Offering a complete set of widgets, the GTK+ is suitable
+Description: common files for the GTK+ graphical user interface library
+ GTK+ is a multi-platform toolkit for creating graphical user
+ interfaces. Offering a complete set of widgets, GTK+ is suitable
  for projects ranging from small one-off tools to complete application
  suites.
  .
@@ -115,14 +115,14 @@ Depends: ${misc:Depends},
          @COMMON_PKG@
 Conflicts: libgtk3.0-bin
 Replaces: libgtk3.0-bin
-Description: The programs for the GTK+ graphical user interface library
- The GTK+ is a multi-platform toolkit for creating graphical user
- interfaces. Offering a complete set of widgets, the GTK+ is suitable
+Description: programs for the GTK+ graphical user interface library
+ GTK+ is a multi-platform toolkit for creating graphical user
+ interfaces. Offering a complete set of widgets, GTK+ is suitable
  for projects ranging from small one-off tools to complete application
  suites.
  .
- This package contains the program files which is used for the libraries
- and others.
+ This package contains the utilities which are used by the libraries
+ and other packages.
 
 Package: @DEV_PKG@
 Section: libdevel
@@ -153,14 +153,14 @@ Recommends: python (>= 2.4),
 Suggests: @DOC_PKG@
 Conflicts: libgtk3.0-dev
 Replaces: libgtk3.0-dev
-Description: Development files for the GTK+ library
- The GTK+ is a multi-platform toolkit for creating graphical user
- interfaces. Offering a complete set of widgets, the GTK+ is suitable
+Description: development files for the GTK+ library
+ GTK+ is a multi-platform toolkit for creating graphical user
+ interfaces. Offering a complete set of widgets, GTK+ is suitable
  for projects ranging from small one-off tools to complete application
  suites.
  .
- This package contains the header files and static libraries which is
- needed for developing the GTK+ applications.
+ This package contains the header files and static libraries which are
+ needed for developing GTK+ applications.
 
 Package: @DEBUG_PKG@
 Section: debug
@@ -171,9 +171,9 @@ Depends: @SHARED_PKG@ (= ${binary:Version}),
          ${misc:Depends}
 Conflicts: libgtk3.0-0-dbg
 Replaces: libgtk3.0-0-dbg
-Description: The GTK+ libraries and debugging symbols
- The GTK+ is a multi-platform toolkit for creating graphical user
- interfaces. Offering a complete set of widgets, the GTK+ is suitable
+Description: GTK+ libraries and debugging symbols
+ GTK+ is a multi-platform toolkit for creating graphical user
+ interfaces. Offering a complete set of widgets, GTK+ is suitable
  for projects ranging from small one-off tools to complete application
  suites.
  .
@@ -191,9 +191,9 @@ Recommends: libglib2.0-doc,
             libpango1.0-doc
 Conflicts: libgtk3.0-doc
 Replaces: libgtk3.0-doc
-Description: Documentation for the GTK+ graphical user interface library
- The GTK+ is a multi-platform toolkit for creating graphical user
- interfaces. Offering a complete set of widgets, the GTK+ is suitable
+Description: documentation for the GTK+ graphical user interface library
+ GTK+ is a multi-platform toolkit for creating graphical user
+ interfaces. Offering a complete set of widgets, GTK+ is suitable
  for projects ranging from small one-off tools to complete application
  suites.
  .
@@ -209,13 +209,13 @@ Depends: ${shlibs:Depends},
          @SHARED_PKG@ (= ${binary:Version})
 Conflicts: gtk-3.0-examples
 Replaces: gtk-3.0-examples
-Description: Examples files for GTK+ 3
- The GTK+ is a multi-platform toolkit for creating graphical user
+Description: example files for GTK+ 3
+ GTK+ is a multi-platform toolkit for creating graphical user
  interfaces. Offering a complete set of widgets, the GTK+ is suitable
  for projects ranging from small one-off tools to complete application
  suites.
  .
- This package contains the examples files and a demonstration program
+ This package contains the example files and a demonstration program
  for GTK+3.
 
 #Package: @PIXBUF_PKG@
@@ -225,9 +225,9 @@ Description: Examples files for GTK+ 3
 #         ${shlibs:Depends},
 #         @SHARED_PKG@ (= ${binary:Version}),
 #         @COMMON_PKG@
-#Description: Pixbuf-based theme for GTK+ 3.x
-# The GTK+ is a multi-platform toolkit for creating graphical user
-# interfaces. Offering a complete set of widgets, the GTK+ is suitable
+#Description: pixbuf-based theme for GTK+ 3.x
+# GTK+ is a multi-platform toolkit for creating graphical user
+# interfaces. Offering a complete set of widgets, GTK+ is suitable
 # for projects ranging from small one-off tools to complete application
 # suites.
 # .
@@ -241,9 +241,9 @@ Depends: @COMMON_PKG@,
          ${gir:Depends}
 Conflicts: gir1.0-gtk-3.0
 Replaces: gir1.0-gtk-3.0
-Description: The GTK+ graphical user interface library -- gir bindings
- The GTK+ is a multi-platform toolkit for creating graphical user
- interfaces. Offering a complete set of widgets, the GTK+ is suitable
+Description: GTK+ graphical user interface library -- gir bindings
+ GTK+ is a multi-platform toolkit for creating graphical user
+ interfaces. Offering a complete set of widgets, GTK+ is suitable
  for projects ranging from small one-off tools to complete application
  suites.
  .
