@@ -15,6 +15,7 @@ gtk+3.0 (3.0.10-1) UNRELEASED; urgency=low
   * Bump debhelper compatibility level to 8. Update Build-Depends accordingly.
   * Drop Build-Depends on dpkg-dev (>= 1.13.19). Even lenny has a more recent
     version.
+  * Update package descriptions.
 
  -- Michael Biebl <biebl@debian.org>  Fri, 03 Jun 2011 22:49:08 +0200
 
